# multi_view_cnn

./: .gitignore  Multi-View CNN.ipynb  README.md
catkin_ws/src/classification/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/classification/launch/: classify_6_channels.launch  classify_all.launch  classify_rot.launch
catkin_ws/src/classification/src/: classify.py  classify_6_channels.py  classify_all.py  classify_rot.py  classify_scale.py  image_rot.py
catkin_ws/src/dl_models/: CMakeLists.txt  package.xml
catkin_ws/src/dl_models/object_classification/caffenet_rot/: README.md  label.txt
catkin_ws/src/dl_models/placard_classification/: README.md
catkin_ws/src/dl_models/placard_classification/10_classes_robotx_duckietown_caffenet/: 10_classes_robotx_duckietown_caffenet.prototxt  lab_list.txt
catkin_ws/src/dl_models/placard_classification/4_classes_gazebo_caffenet/: 4_classes_gazebo_caffenet.prototxt  lab_list.txt
catkin_ws/src/dl_models/placard_classification/green_circle_end_to_end_bamboolake_caffenet/: lab_list.txt
catkin_ws/src/robotx_msgs/: CMakeLists.txt
catkin_ws/src/robotx_msgs/msg/: ObjectPose.msg
catkin_ws/src/velodyne_perception/: CMakeLists.txt  package.xml
catkin_ws/src/velodyne_perception/config/: bamboo_lake.yaml  gazebo.yaml
catkin_ws/src/velodyne_perception/launch/: dock_normal.launch  pcl_cluster.launch  pcl_map.launch  pcl_preprocessing.launch  pcl_preprocessing_rviz.launch
catkin_ws/src/velodyne_perception/src/: auto_labeling.cpp  mapping_tf.py  test_pcd.cpp
